crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_pub_needs_names_before_next_item.snap
---
source: crates/alder-parse/src/item/import.rs
description: "pub import @alder/http\nlet x = 1\n"
---
Import(
    PubNeedsNames(
        1,
        23,
    ),
    1,
    5,
)
