crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_reserved_binding.snap
---
source: crates/alder-parse/src/item/import.rs
description: import @alder/test
---
Import(
    ReservedBinding(
        Test,
        1,
        15,
    ),
    1,
    1,
)
