crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_reserved_binding_segment.snap
---
source: crates/alder-parse/src/item/import.rs
description: import ~/db/type
---
Import(
    ReservedBinding(
        Type,
        1,
        13,
    ),
    1,
    1,
)
