crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_root_only.snap
---
source: crates/alder-parse/src/item/import.rs
description: import ~
---
Import(
    RootOnly(
        1,
        8,
    ),
    1,
    1,
)
