crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__error_tail.snap
---
source: crates/alder-parse/src/item/import.rs
description: import @alder/http.get
---
Import(
    Tail(
        1,
        20,
    ),
    1,
    1,
)
