crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__grouped_comments.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import (\n// operations\njson, // encoding\nio,\n)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: ImportGroup(
            [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 1,
                        },
                        end: Position {
                            line: 3,
                            column: 5,
                        },
                    },
                    value: Import {
                        path: Located {
                            region: Region {
                                start: Position {
                                    line: 3,
                                    column: 1,
                                },
                                end: Position {
                                    line: 3,
                                    column: 5,
                                },
                            },
                            value: ModulePath {
                                root: StandardLibrary,
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 3,
                                                column: 1,
                                            },
                                            end: Position {
                                                line: 3,
                                                column: 5,
                                            },
                                        },
                                        value: "json",
                                    },
                                ],
                            },
                        },
                        tail: Module,
                    },
                },
                Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 1,
                        },
                        end: Position {
                            line: 4,
                            column: 3,
                        },
                    },
                    value: Import {
                        path: Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 1,
                                },
                                end: Position {
                                    line: 4,
                                    column: 3,
                                },
                            },
                            value: ModulePath {
                                root: StandardLibrary,
                                segments: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 4,
                                                column: 1,
                                            },
                                            end: Position {
                                                line: 4,
                                                column: 3,
                                            },
                                        },
                                        value: "io",
                                    },
                                ],
                            },
                        },
                        tail: Module,
                    },
                },
            ],
        ),
    },
}
