crates/alder-parse/src/item/snapshots/alder_parse__item__import__tests__local_names.snap
---
source: crates/alder-parse/src/item/import.rs
description: "import ~/db/users.{ find }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 27,
        },
    },
    value: Item {
        attributes: [],
        visibility: Private,
        kind: Import(
            Import {
                path: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 8,
                        },
                        end: Position {
                            line: 1,
                            column: 18,
                        },
                    },
                    value: ModulePath {
                        root: Local(
                            Region {
                                start: Position {
                                    line: 1,
                                    column: 8,
                                },
                                end: Position {
                                    line: 1,
                                    column: 9,
                                },
                            },
                        ),
                        segments: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 12,
                                    },
                                },
                                value: "db",
                            },
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 13,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 18,
                                    },
                                },
                                value: "users",
                            },
                        ],
                    },
                },
                tail: Names(
                    [
                        ImportName {
                            name: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 21,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 25,
                                    },
                                },
                                value: "find",
                            },
                            alias: None,
                        },
                    ],
                ),
            },
        ),
    },
}
